--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!--[if HTML5]><![endif]-->
 <!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
@@ -24,6 +23,7 @@
             <h1>Diego Ignacio Tarud Garrido  </h1>
             <h2>Egresado Ingeniería Civil en Ciencia de la Computación</h2>    
             <h3>Universidad de los Andes</h3>      
+            <p> <i>CV en actualización</i> </p>    
             <a href="#" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/TarudG" class="fa fa-twitter" target="_blank"></a>
             <a href="https://www.linkedin.com/in/diego-tarud-garrido-55b79a130/" class="fa fa-linkedin" target="_blank"></a>
