--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Egresado Ingeniería Civil en Ciencia de la Computación</h2>    
             <h3>Universidad de los Andes</h3>      
             <p> <i>CV en actualización</i> </p>    
-            <a href="#" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://www.facebook.com/diego.tarud/" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/TarudG" class="fa fa-twitter" target="_blank"></a>
             <a href="https://www.linkedin.com/in/diego-tarud-garrido-55b79a130/" class="fa fa-linkedin" target="_blank"></a>
             <a href="https://github.com/ditarud" class="fa fa-github"  target="_blank"></a>
