--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <!--[if IE 8]><html class="ie ie8 ie-lte9 ie-lte8 no-js" lang="es-es"> <![endif]-->
 <!--[if IE 9]><html class="ie9 ie-lte9 no-js" lang="es-es"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html class="no-js" lang="es-es"> <!--<![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <head>
     <!-- Add icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,8 +22,8 @@
 
     <div class="content ">     
         <div style="text-align: center;"> 
-            <h1>Diego Ignacio Tarud Garrido  </h1>
-            <h2>Egresado Ingeniería Civil en Ciencia de la Computación</h2>    
+            <h1>Diego Ignacio Tarud Garrido</h1>
+            <h2>Ingeniero Civil en Ciencia de la Computación</h2>    
             <h3>Universidad de los Andes</h3>      
             <p> <i>CV en actualización</i> </p>    
             <a href="#" class="fa fa-facebook" target="_blank"></a>
