--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Diego Ignacio Tarud Garrido</h1>
             <h2>Ingeniero Civil en Ciencia de la Computación</h2>    
             <h3>Universidad de los Andes</h3>      
-            <p> <i>CV en actualización</i> </p>    
+            <p> <i>  <a href="Diego Tarud CV.pdf" download> Curriculum Vitae </a> </i> </p>                 
             <a href="https://www.facebook.com/diego.tarud/" class="fa fa-facebook" target="_blank"></a>
             <a href="https://twitter.com/TarudG" class="fa fa-twitter" target="_blank"></a>
             <a href="https://www.linkedin.com/in/diego-tarud-garrido-55b79a130/" class="fa fa-linkedin" target="_blank"></a>
